apps/kube-prom/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  namespace: kube-prom
spec:
  hostnames:
  - grafana.lab.mpopov.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
    namespace: networking
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: kube-prom-grafana
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
